fixing radar spacing v1

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -191,11 +191,11 @@
   justify-content: center;
   align-items: center;
   margin-top: 18rem;
-  margin-bottom: -16.8rem;
+  margin-bottom: -14rem;
 }
 .spinner {
-  width: 70vw;
-  height: 70vw;
+  width: 60vw;
+  height: 60vw;
   max-width: 400px;
   max-height: 400px;
   position: relative;
